# learning

./: .gitmodules
.github/workflows/: cpp_rust_like_result_test.yml
.github/workflows/cpp/: rust_like_result_test.yml
cpp/: .gitignore
cpp/hello/: a.out
cpp/rust_like_result/: CMakeLists.txt
cpp/rust_like_result/examples/: CMakeLists.txt  main.cpp
cpp/rust_like_result/include/: option.hpp  result.hpp
cpp/rust_like_result/test/: CMakeLists.txt  test_option.cpp  test_result.cpp
cpp/tcp/: Makefile
cpp/tcp/include/: app_protocol.h  impl.h  socket.h
cpp/tcp/src/: impl.cpp
deno/fresh-project/routes/: index.tsx
deno/fresh/routes/: _app.tsx
node/hello/: package.json
rust/rest/: Cargo.toml
zig/zig_simd/: build.zig
