[package]
name = "rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
axum = { version = "0.6.20", features = ["http2", "headers", "tracing"] }
tokio = { version = "1.32.0", features = ["full", "tracing"] }
